--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,12 +10,15 @@
   top: 90px;
   right: 40px;
   z-index: 5;
-
+  .empty-message {
+    font-size: 18px;
+    margin: 15px;
+  }
   .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
   }
 
   button {
